# reachy_mini

./: .gitignore
apps/reachy-dance-duo/: .gitattributes  .gitignore  README.md  index.html  pyproject.toml  reachy-app.json  start_server.py  style.css
apps/reachy-dance-duo/js/: analyzer_client.js  beat_bandit.js  bpm_stability.js  cyber_branding.js  duo_connection.js  idle_breathing.js  live_groove.js  mjcf_loader.js  move_library.js  reachy_robot.js  safety_mixer.js  state_to_pose.js  visualizer.js
apps/reachy-dance-duo/reachy_dance_duo/: __init__.py  __main__.py  app.py  config.py  environment_profile.npz  main.py  mode_settings.json  mode_settings.py  move_config.py  move_dampening.json  move_mirror.json
apps/reachy-dance-duo/reachy_dance_duo/behaviors/: __init__.py  base.py  (+2 more)
apps/reachy-dance-duo/scripts/: check_mac_deps.sh
apps/reachy_mirror/: .gitignore  README.md  index.html  pyproject.toml  reachy-app.json  style.css
apps/reachy_mirror/reachy_mirror/: main.py
reachy_dialogue_app/: README.md  index.html  plan.md  pyproject.toml  reachy-app.json  style.css
reachy_dialogue_app/docs/: tts-streaming-8002-8042-bug-report.md
reachy_dialogue_app/models/: README.md
reachy_dialogue_app/reachy_dialogue_app/: __init__.py  auto_voice.py  behavior_config.yaml  emoji_config.json  main.py  vad.py
reachy_dialogue_app/reachy_dialogue_app/api/: __init__.py  auto_voice_routes.py  common.py  followup_memory_routes.py  interaction_routes.py  payloads.py  robot_routes.py  settings_routes.py
reachy_dialogue_app/reachy_dialogue_app/audio/: __init__.py  playback.py  robot_mic.py  robot_output.py  utils.py
reachy_dialogue_app/reachy_dialogue_app/auto_voice/: __init__.py  config.py  hooks.py  manager.py  session.py  sse.py  types.py
reachy_dialogue_app/reachy_dialogue_app/behavior/: __init__.py  action.py  config.py  models.py  triggers.py
reachy_dialogue_app/reachy_dialogue_app/core/: __init__.py  constants.py  http.py  settings.py
reachy_dialogue_app/reachy_dialogue_app/dialogue/: followups.py  text_tts.py
reachy_dialogue_app/reachy_dialogue_app/interaction/: __init__.py  client.py  sse.py  types.py
reachy_dialogue_app/reachy_dialogue_app/static/: auto-voice-test.html  auto-voice-test.js  index.html  local-mic-test.html  local-mic-test.js  main.js  style.css
reachy_dialogue_app/reachy_dialogue_app/vad/: __init__.py  audio.py  config.py  constants.py  frames.py  segmenter.py  silero.py
reachy_dialogue_app/scripts/: dialogue_stream_probe.py  download_silero_vad.py
reachy_dialogue_app/tests/: dialogue_stream_mock_test.js
(+212 files in other folders)
