[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_dialogue_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "PyYAML",
    "onnxruntime",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_dialogue_app = "reachy_dialogue_app.main:ReachyDialogueApp"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_dialogue_app = ["**/*"] # Also include all non-.py files
