[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy-dance-duo"
version = "1.0.5"
description = "The ultimate dance app for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "av>=11.0.0",
    "numpy>=1.24.0",
    "reachy-mini-dances-library",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "httpx>=0.26.0",
    "numba>=0.58.0",
    "librosa>=0.10.0,<0.11.0",
    "yt-dlp>=2024.1.0",
    "ytmusicapi>=1.11.0",
    "eclipse-zenoh>=1.0.0",
]
keywords = ["reachy-mini-app", "dance"]

[project.optional-dependencies]
# disco_diva removed to avoid portaudio dependency


[project.entry-points."reachy_mini_apps"]
reachy_dance_duo = "reachy_dance_duo.main:ReachyDanceDuo"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_dance_duo = ["**/*"]
