[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.2.5",
    "opencv-python>=4.12.0",
    "numpy>=1.24.0",
    "mediapipe==0.10.14"
]
keywords = ["reachy-mini-app","reachy-mirror","mirror"]

[project.entry-points."reachy_mini_apps"]
reachy_mirror = "reachy_mirror.main:ReachyMirror"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mirror = ["**/*"] # Also include all non-.py files
